--- a/index.html
+++ b/index.html
@@ -250,16 +250,17 @@
     <!-- FOOTER -->
         <footer>
             <p>🏫 Silver Academy of Silveridia</p>
-            <p>© 2000 - 2025. All Rights Reserved.</p>
+            <p>123 Silver St., Silver City, Silveridia | info@silveracademy.edu.sld</p>
             <div class="social-links">
                 <a href="#">Facebook</a> |
-                <a href="#">Twitter</a> |
+                <a href="#">Tiktok</a> |
                 <a href="#">Instagram</a>
             </div>
-            <p class="contact-info">123 Silver St., Silveridia City | info@silveracademy.com</p>
+            <p class="contact-info">SOFIA LAURENCE F. PADOJINOG | 10 - SAPPHIRE | padojinog.sf@obmontessori.edu.ph</p>
         </footer>
 
     <!-- PYTHON SCRIPT -->
     <py-script src="main.py"></py-script>
 </body>
+
 </html>
