--- a/grade-calculator.html
+++ b/grade-calculator.html
@@ -322,16 +322,17 @@
     <!-- FOOTER -->
         <footer>
             <p>🏫 Silver Academy of Silveridia</p>
-            <p>© 2000 - 2025. All Rights Reserved.</p>
+            <p>123 Silver St., Silver City, Silveridia | info@silveracademy.edu.sld</p>
             <div class="social-links">
-                <a href="#">Facebook</a> |
-                <a href="#">Twitter</a> |
+                <a href="#">Facebook</a> 
+                <a href="#">Tiktok</a> 
                 <a href="#">Instagram</a>
             </div>
-            <p class="contact-info">123 Silver St., Silveridia City | info@silveracademy.com</p>
+            <p class="contact-info">SOFIA LAURENCE F. PADOJINOG | 10 - SAPPHIRE | padojinog.sf@obmontessori.edu.ph</p>
         </footer>
 
     <!-- PYTHON SCRIPT -->
     <py-script src="grade-calculator.py"></py-script>
 </body>
+
 </html>
